# budget-teardown-service

./: Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
infrastructure/: budget-teardown-service.yaml
scripts/: build.sh
services/s3_teardown_lambda/: pyproject.toml
services/s3_teardown_lambda/s3_teardown_lambda/: main.py
services/s3_teardown_lambda/tests/unit/: test_main.py
src/s3_teardown_lambda/: main.py
