[project]
name = "s3-teardown-lambda"
version = "0.1.0"
description = "Deletes s3 public resources in the event of a budget alert."
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["aws-lambda-powertools", "boto3", "boto3-stubs[s3]"]

[dependency-groups]
dev = ["moto[s3]", "mypy", "pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
pythonpath = ["."]


[tool.setuptools.packages.find]
where = ["."]
include = ["s3_teardown_lambda*"]
